--- a/style.css
+++ b/style.css
@@ -21,7 +21,7 @@ body{
 .qrimage{
     display: block;
     margin: auto;
-    width: 100%;
+    max-width: 16rem;
     border-radius: 1rem;
 }
 .title{
