--- a/style.css
+++ b/style.css
@@ -4,15 +4,14 @@ body{
     place-content: center;
     padding: 1rem;
     background-color: hsl(212, 45%, 89%);
-    font-family: "Outfit", sans-serif;
+    font-family: 'Outfit', sans-serif;
     font-weight: 700;
-
 }
 .main{
     padding: 1rem;
-    max-width: 20rem;
+    max-width: 18rem;
     background-color: hsl(0, 0%, 100%);
-    border-radius: 1rem;
+    border-radius: 1.1rem;
     text-align: center;
 }
 .attribution{
@@ -25,13 +24,13 @@ body{
     display: block;
     margin: auto;
     max-width: 100%;
-    border-radius: 1rem;
+    border-radius: 0.5rem;
 }
 .title{
-    font-size: 1.6rem;
+    font-size: 1.4rem;
     color: hsl(218, 44%, 22%);
 }
 .text{
     color: hsl(220, 15%, 55%);
-    font-size: 1.1rem;
+    font-size: 1rem;
 }
