--- a/style.css
+++ b/style.css
@@ -1,18 +1,17 @@
 body{
-    min-height: 100vh;
+    min-height: 90vh;
     display: grid;
     place-content: center;
     padding: 1rem;
     background-color: hsl(212, 45%, 89%);
     font-family: 'Outfit', sans-serif;
-    font-weight: 700;
+    text-align: center;
 }
 .main{
     padding: 1rem;
     max-width: 18rem;
     background-color: hsl(0, 0%, 100%);
     border-radius: 1.1rem;
-    text-align: center;
 }
 .attribution{
     margin: auto;
@@ -29,8 +28,11 @@ body{
 .title{
     font-size: 1.4rem;
     color: hsl(218, 44%, 22%);
+    font-weight: 700;
 }
 .text{
     color: hsl(220, 15%, 55%);
     font-size: 1rem;
+    font-weight: 400;
+    margin: 0.5rem;
 }
