--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@ body{
     padding: 1rem;
     max-width: 18rem;
     background-color: hsl(0, 0%, 100%);
-    border-radius: 1.1rem;
+    border-radius: 1.5rem;
 }
 .attribution{
     margin: auto;
@@ -23,7 +23,7 @@ body{
     display: block;
     margin: auto;
     max-width: 100%;
-    border-radius: 0.5rem;
+    border-radius: 1rem;
 }
 .title{
     font-size: 1.4rem;
@@ -34,5 +34,6 @@ body{
     color: hsl(220, 15%, 55%);
     font-size: 1rem;
     font-weight: 400;
-    margin: 0.5rem;
+    margin: 0.4rem;
+    padding: 0.5rem;
 }
